Removed AppShell cuz it has caused many errors, now loging in works and app loads properly to the dashboard, starting to make CRUD work
